--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="x-AU-compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>Document</title>
 </head>
 <body>
-<section class="conteudo-principal">
-    <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
-<div class="botoes">
-    <button class="botao">Cursos na Alura</button>
-    <button class="botao">Criar projetos em Javascript</button>
-    <button class="botao">Criar um portfolio</button>
-    <button class="botao">Atualizar meu currículo</button>
-</div>
-</section>
-<body>
-    <h2>Olá devs!</h2>
-    <div>
-        <p>Aula 01</p>
-        <a href="#"><p>Slides da Aula</p></a>
-    </div>
+    <h1>vai ser uma imagem aqui</h1>
+    
 </body>
+</html>
