--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="alura.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Colégio estadual Júlio Giongo</li>
-            <li class="cabecalho-lista-item">Vitória</li>
+            <li class="cabecalho-lista-item">vitoria</li>
         </ul>
     </header>
     <section class="escola">
@@ -24,43 +24,33 @@
             <p class="escola-texto-um">O Colégio Estadual Júlio Giongo, localizado em Pranchita, Paraná, é uma instituição de ensino fundamental e médio que atende a comunidade local. Oferece uma variedade de disciplinas e atividades extracurriculares para os alunos, proporcionando uma educação abrangente. Além disso, a escola geralmente promove eventos e projetos para envolver os alunos e a comunidade escolar. Como amigo, quero saber se você tem alguma experiência ou interesse específico em relação a essa escola.</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="Captura de tela_2024-02-22_11-19-17.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="julio giongo.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src=" default-profile-picture-avatar-photo-600nw-1725917284.webp">
-            <h3 class="estudante-nome">02</h3>
+            <img class="estudante-imagem" src="luan santana.jpg">
+            <h3 class="estudante-nome">laura</h3>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="default-profile-picture-avatar-photo-600nw-1725917284.webp">
-            <h3 class="estudante-nome">Abacaxi</h3>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="default-profile-picture-avatar-photo-600nw-1725917284.webp">
-            <h3 class="estudante-nome">João Bigode</h3>
-        </div>
-        <span></span>
-        <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="default-profile-picture-avatar-photo-600nw-1725917284.webp">
-            <h3 class="estudante-nome">Samuel</h3>
-        </div>
-        
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="default-profile-picture-avatar-photo-600nw-1725917284.webp">
+            <img class="estudante-imagem" src="luan santana.jpg">
             <h3 class="estudante-nome">Gabriel</h3>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="default-profile-picture-avatar-photo-600nw-1725917284.webp">
-            <h3 class="estudante-nome">Ygor</h3>
+            <img class="estudante-imagem" src="luan santana.jpg">
+            <h3 class="estudante-nome">erick</h3>
         </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="luan santana.jpg">
+            <h3 class="estudante-nome">ygor</h3>
         </div>
     </section>
         <footer class="rodape">
-        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+        <img class="rodape-imagem"src="kkk.jpeg" alt="logo da alura start">
         </footer>
         </body>
         </html>
