--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="cabecalho-imagem" src="alura.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Colégio estadual Júlio Giongo</li>
-            <li class="cabecalho-lista-item">vitoria</li>
+            <li class="cabecalho-lista-item">vitoria Lampert</li>
         </ul>
     </header>
     <section class="escola">
@@ -50,7 +50,7 @@
         </div>
     </section>
         <footer class="rodape">
-        <img class="rodape-imagem"src="kkk.jpeg" alt="logo da alura start">
+        <img class="rodape-imagem"src="alura.png" alt="logo da alura start">
         </footer>
         </body>
         </html>
